[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/EnemyShip01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyShip.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0

[node name="EnemyShip" type="Node2D"]
script = ExtResource( 3 )
timeToShoot = 1.0

[node name="ShipSprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 3.14159
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )

[node name="EnemyArea" type="Area2D" parent="."]

[node name="ShipArea" type="CollisionShape2D" parent="EnemyArea"]
shape = SubResource( 1 )

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 300
lifetime = 0.7
one_shot = true
explosiveness = 0.73
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 64.22
scale_amount = 1.4
color = Color( 1, 0, 0, 1 )

[node name="ThrustParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -27 )
z_index = -1
amount = 65
lifetime = 0.7
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2( 1, -23.418 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.16
scale_amount = 2.0
color = Color( 0.392157, 0, 1, 1 )

[node name="FirePoints" type="Node" parent="."]

[node name="Left" type="Node2D" parent="FirePoints"]
position = Vector2( -22, 25 )

[node name="Right" type="Node2D" parent="FirePoints"]
position = Vector2( 22, 25 )

[connection signal="area_entered" from="EnemyArea" to="." method="_on_EnemyArea_area_entered"]
